--- a/Package-themer.css
+++ b/Package-themer.css
@@ -50,7 +50,7 @@
   --text-bold-color: #7209B7;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #FFFFFF;
-  --inverse-background-color: #300660;
+  --inverse-background-color: #1d3557;
   --inverse-header-color: #FFFFFF;
   --inverse-link-color: #4cc9f0;
   --title-slide-background-color: #300660;
