--- a/Package-themer.css
+++ b/Package-themer.css
@@ -46,8 +46,8 @@
   --text-color: #300660;
   --header-color: #300660;
   --background-color: #FFFFFF;
-  --link-color: #7209B7;
-  --text-bold-color: #7209B7;
+  --link-color: #e63946;
+  --text-bold-color: #0077b6;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #FFFFFF;
   --inverse-background-color: #1d3557;
